--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -3,3 +3,9 @@
   padding: 0 25px;
   list-style: none;
 }
+
+.item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
